--- a/app/globals.css
+++ b/app/globals.css
@@ -26,3 +26,21 @@ html, #__next {
   margin: 0;
   padding: 0;
 }
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
