--- a/components/CornerHUD/CornerHUD.css
+++ b/components/CornerHUD/CornerHUD.css
@@ -4,14 +4,14 @@
     width: 300px;
     top: 10px;
     left: 15px;
-    z-index: 10;
+    z-index: 11;
     pointer-events: none;
 }
 
 .hud-fade-in {
-    animation: fadeIn 1s forwards;
+    animation: fade-in 1s forwards;
 }
 
 .hud-fade-out {
-    animation: fadeOut 0.5s forwards;
+    animation: fade-out 0.5s forwards;
 }
