--- a/components/LocationInfo/LocationInfo.css
+++ b/components/LocationInfo/LocationInfo.css
@@ -8,6 +8,7 @@
     overflow: hidden;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    z-index: 10;
   }
   
 .location-info-close-button {
@@ -18,11 +19,12 @@
     cursor: pointer;
 }
 
-@keyframes slideIn {
+@keyframes slide-in {
     from {
         transform: translateX(-100%);
         opacity: 0;
     }
+
     to {
         transform: translateX(0);
         opacity: 1;
@@ -30,7 +32,7 @@
 }
   
 .slide-in {
-    animation: slideIn 0.5s forwards;
+    animation: slide-in 0.5s forwards;
 }
 
 .location-line {
