--- a/components/DateSlider/DateSlider.css
+++ b/components/DateSlider/DateSlider.css
@@ -31,6 +31,6 @@
     flex: 1;
 }
   
-.slick-dots li.slick-active button::before {
+.slick-dots li.slick-active button:before {
     color:white !important;
 }
